Replace jessiarm <- jessiarm2
Remove jessiarm 1'st train result, then jessiarm2 -> jessiarm

--- a/config/yolov4_jessiarm.yaml
+++ b/config/yolov4_jessiarm.yaml
@@ -8,6 +8,6 @@ yolo_model:
     value: 0.8
   detection_classes:
     names:
-      - GreenCylinder
-      - GreenXCube
-      - GrayYCube
+      - RedCube
+      - RedStar
+      - BlueCylinder
